# llm-research-stack

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
data/sample_docs/: 001_intro.txt  002_terms.txt
docs/: api.md  architecture.md  index.md  roadmap.md  safety.md
llm/agents/: crypto_research_agent.py
llm/api/: main.py
llm/evaluation/: metrics.py
llm/prompts/: knowledge_grounded_system.md
llm/rag/: ingest.py  rag_chain.py  retriever.py
llm/rlhf/: ppo_train.py  reward_modeling.py
llm/sft/: train_sft.py
notebooks/: 00_quick_rag_demo.ipynb
tests/: test_health.py
